# mbed-nucleo-l412kb

./: README.md  custom_targets.json  system_clock.c
TARGET_NUCLEO_L412KB/: CMakeLists.txt  PeripheralPins.c  PinNames.h
